# RPI_Measurement_System

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: conf.py  dev_guide.rst  index.rst  prerequisites.rst  reference.rst  user_guide.rst
docs/build_html/: dev_guide.html  genindex.html  index.html  prerequisites.html  py-modindex.html  reference.html  search.html  searchindex.js  user_guide.html
docs/build_html/_modules/: index.html
docs/build_html/_modules/MeasurementSystem/: measurement_server.html
docs/build_html/_modules/MeasurementSystem/core/: Utils.html
docs/build_html/_modules/MeasurementSystem/core/common/: BaseClasses.html  Ceda.html  Config.html  Data.html  Models.html  Utils.html
docs/build_html/_modules/MeasurementSystem/core/comvisu/: Command.html  ServerUtils.html
docs/build_html/_modules/MeasurementSystem/core/driver/: BaseClasses.html  Config.html  Data.html  DigilentMCC118.html  DigilentMCC134.html  Hardware.html  Models.html  RaspberryPi.html
docs/build_html/_static/: documentation_options.js
others/: Dokumentation.docx  Motor-Prüfstand.docx  Motor-Prüfstand.xlsx
others/ComVisu/: START Measurement System.bat  comvisu.settings  configuration.visu
others/Electronics/IgnitionSignalProcessing/: IgnitionSignalProcessing.asc
others/RPi5/: RPI5_Pinbelegung.xlsx
scripts/: generate_UML_diagrams.py
src/MeasurementSystem/: measurement_server.py
src/MeasurementSystem/config/: channels_default.json  channels_user.json  hardware_default.json  hardware_user.json  modules_default.json  modules_user.json
src/MeasurementSystem/core/: Utils.py
src/MeasurementSystem/core/common/: BaseClasses.py  Ceda.py  Config.py  Data.py  Models.py  Utils.py
src/MeasurementSystem/core/comvisu/: Command.py  ServerUtils.py
src/MeasurementSystem/core/driver/: BaseClasses.py  Config.py  DigilentMCC118.py  DigilentMCC134.py  Hardware.py  Models.py  RaspberryPi.py
tests/_debug/: ceda_load_combine.py  test.ipynb  test_Hardware.py  test_dynamic_models.py  test_find_usbstick  test_gpio_control.py  test_gpio_freq_counter.py  test_gpio_gpiochip_info.py  test_gpio_pwm_output.py  test_gpio_toggle_benchmark.py  test_hardwareInterface_save.py  test_hardwareinterface_restore.py  test_hx711.py  test_mcc118.py  test_mcc134.py  test_serialize_objects.py
tests/_debug/tcpip/: test_client.py  test_server.py
